--- a/Комманды.md
+++ b/Комманды.md
@@ -1,70 +1,373 @@
-**вызов терминала** = ctrl + alt + T
+**вызов терминала** = ```ctrl + alt + T```
 
-вводить текст для команды = echo
+**вводить текст для команды** = ```echo```
 
-переключение полностью на текстовый интерфейс Linux = ctrl alt + F3 (потом 
+**переключение полностью на текстовый интерфейс Linux** = ```ctrl alt + F3``` (потом 
 можно нажимать F4, F5 и так далее созадавать сессии)
 
-вернуться обратно в оболочку Ubuntu = ctrl alt + F2
+**вернуться обратно в оболочку Ubuntu** = ```ctrl alt + F2```
 
+____
 
+1) ```uptume``` = **показывает какое сейчас время и сколько включен компьютер**
+2) ```uname``` = **какая система стоит**
+3) ```uname - a``` = **расширенная версия команды сверху**
+4) ```lscpu``` = **какой процессор стоит**
+5) ```clear``` = **очистить экран**
+6) ```ls``` = **отобразится содержимое текущей директории**
+7) ```ls -l``` = **Показать детализированное представление файлов и директорий в текущей директории**
+8) ```ls -F``` = **Отобразить содержимое текущей директории с добавлением к именам символов, характеризующих их тип**
+9) ```ls -a``` = **Показать скрытые файлы и директории в текущей директории**
+10) ```echo $PATH``` = **директории в которых линукс ищет команды, которые запускает**
+11) ```man(manual) -k (keywords) time(допустим)``` = **вывод команд если не знаешь никаких**
+12)``` man uptime(допустим)``` = **вывод полной информации о команде
+/поисковое_слово (найдет искомые слова на всей странице)**
+11) ```ctrl + C``` = **прервать команду (закрыть ее)**
+12) ```ctrl + z``` = **режим sleep**
+13) ```info uptime(допустим)``` = **альтернатива man**
+14) ```whatis uptime``` = **микро алтернатива man**
+15) ```whereis uptime``` = **где находится программа**
+16) ```locate uptime``` = **найти расположение название файла**
+17) ```ps``` = **какие процессы запущены**
+18) ```fg``` = **показать процесс снова (после sleep, допустим)**
 
-1) uptome = показывает какое сейчас время и сколько включен компьютер
-2) uname = какая система стоит
-3) uname - a = расширенная версия команды сверху
-4) lscpu = какой процессор стоит
-5) clear = очистить экран 
-6) ls = показать директории
-7) ls -l = показать пути к программам ($ PATH)
-8) echo $PATH = директории в которых линукс ищет команды, которые запускает
-9) man(manual) -k (keywords) time(допустим) = вывод команд если не знаешь никаких
-10) man uptime(допустим) = вывод полной информации о команде
-/поисковое_слово (найдет искомые слова на всей странице)
-11) ctrl + C = прервать команду (закрыть ее)
-12) ctrl + z = режим sleep
-13) info uptime(допустим) = альтернатива man
-14) whatis uptime = микро алтернатива man
-15) whereis uptime = где находится программа
-16) locate uptime = найти расположение название файла
-17) ps = какие процессы запущены
-18) fg (for graund) = показать процесс снова (после sleep, допустим)
-
+____
 
 ДИРЕКТОРИИ
 
 Когда создается директория - все файлы находятся в home
 
-~ = домашняя директория!!!
+```~``` = **домашняя директория!!!**
 
-1) cd / (change dear) = переход в другую директорию (коренная директория)
-2) ls -l (long) = просмотр содержимого
-3) ls -la (long all) = скрытые директории и файлы (файл с точкой .)
-4) . - где нахоужсь, .. - директория выше
-5) pwd (print working directory) = показать, в какой директории сейчас нахожусь
-6) cd ../.. = вернуться (/home/Olesya/Documents) в home
-7) cd или cd~ = вернуться в домашнюю директорию
-8) cd ~/Documents/ = быстрый переход к нужной директории
+1) ```cd /``` (change dear) = **переход в другую директорию (коренная директория)**
+2) ```ls -l``` (long) = **просмотр содержимого**
+3) ```ls -la``` (long all) = **скрытые директории и файлы (файл с точкой .)**
+4) ```.``` - **где нахоужсь**
+5) ```..``` - **директория выше**
+6) ```pwd``` **(print working directory) = показать, в какой директории сейчас нахожусь**
+7) ```cd ..``` = **Перейти в директорию уровнем выше**
+8) ```cd``` = **Перейти в домашнюю директорию вашего пользователя**
+9) ```cd ../..``` = **Перейти в директорию двумя уровнями выше**
+10)```cd или cd~``` = **вернуться в домашнюю директорию**
+11)```cd ~/Documents/``` = **быстрый переход к нужной директории**
+12) ```cd ~user_name ```= **Перейти в домашнюю директорию пользователя user_name**
+13) ```cd -``` = **перейти в директорию, в которой находились до перехода в текущую директорию**
 
-9) cat *имя файла.txt* = выводит содержимое файла
-10) touch *название файла.txt* = создать файл текстовый
-11) cp название файла.txt /home/olesya/Documents - скопировать документ в другое место
-
-
-перейти в директорию cd dir1/
-создать директорию = mkdir
-mkdir -p dir4/dir5 = создать директорию в директории
-ls -R (рекурсивири) = понять что это
-ls -Rla = тоже понять вывод списка
-
-
-1) загрузчик
-2) запуск и начальная инициализация ядра
-3) обнаружение оборудования, загрузка драйверов и подключение файловых систем
-4) запуск системных служб (демонов)
-5) старт графической или консольной пользовательской сессии
+1) ```cat *имя файла.txt*``` = **выводит содержимое файла**
+2) ```touch *название файла.txt*``` = **создать файл текстовый**
+3) ```touch test{1,2,3}``` = **создание нескольких файлов сразу**
+4) ```cp название файла.txt /home/olesya/Documents``` - **скопировать документ в другое место**
 
 
-1) добавить запись в cron системы
-2) скрипт для автозапуска в systemd
-3) через графический интерфейс (Startup Application)
-4) через файл rc.local
+1) ```cd dir1/``` = **перейти в директорию**
+2) ```mkdir``` = **создать директорию**
+3) ```mkdir -p dir4/dir5``` = **создать директорию в директории**
+4) ```ls -R (рекурсивири)``` = **понять что это**
+5) ```ls -Rla``` = **тоже понять вывод списка**
+
+____
+
+Файловые команды
+
+```cd ../..```	
+**перейти в директорию двумя уровнями выше**
+
+```cd```	
+**перейти в домашнюю директорию**
+
+```cd ~user```	
+**перейти в домашнюю директорию пользователя user**
+
+```cd``` 
+**перейти в директорию, в которой находились до перехода в текущую директорию**
+
+```pwd```	
+**показать текущюю директорию**
+
+```mkdir dir```	
+**создать каталог dir**
+
+```mkdir dir1```	
+**создать директорию с именем 'dir1'**
+
+```mkdir dir1 dir2```
+**создать две директории одновременно**
+
+```mkdir -p /tmp/dir1/dir2```
+**создать дерево директорий**
+
+```rm file```
+**удалить file
+
+```rm -r dir```
+**удалить каталог dir**
+
+```rm -f file```	
+**удалить форсированно file**
+
+```rm -rf dir```
+**удалить форсированно каталог dir**
+
+```rm -f file1```
+**удалить файл с именем 'file1'**
+
+```rmdir dir1```
+**удалить директорию с именем 'dir1'**
+
+```rm -rf dir1```	
+**удалить директорию с именем 'dir1' и рекурсивно всё её содержимое**
+
+```rm -rf dir1 dir2```
+**удалить две директории и рекурсивно их содержимое**
+
+```cp file1 file2```
+**скопировать file1 в file2**
+
+```cp -r dir1 dir2```	
+**скопировать dir1 в dir2; создаст каталог dir2, если он не существует**
+
+```cp dir/```	
+**копировать все файлы директории dir в текущую директорию**
+
+```cp -a /tmp/dir1```
+**копировать директорию dir1 со всем содержимым в текущую директорию**
+
+```cp -a dir1 dir2```
+**копировать директорию dir1 в директорию dir2**
+
+```mv dir1 new_dir```
+**переименовать или переместить файл или директорию**
+
+```mv file1 file2```	
+**переименовать или переместить file1 в file2. если file2 существующий каталог - переместить file1 в каталог file2**
+
+```ln -s file1 lnk1```
+**создать символическую ссылку на файл или директорию**
+
+```ln file1 lnk1```	
+**создать «жёсткую» (физическую) ссылку на файл или директорию**
+
+```touch file```
+**создать file**
+
+ ```touch test{1,2,3}```
+ **создание нескольких файлов сразу**
+
+____
+Архивация
+
+```tar cf file.tar files```	
+создать tar-архив с именем file.tar содержащий files
+
+```tar xf file.tar```
+распаковать file.tar
+
+```tar czf file.tar.gz files```	
+создать архив tar с сжатием Gzip
+
+```tar xzf file.tar.gz```
+распаковать tar с Gzip
+
+```tar cjf file.tar.bz2```	
+создать архив tar с сжатием Bzip2
+
+```tar xjf file.tar.bz2```
+распаковать tar с Bzip2
+
+```gzip file```	
+сжать file и переименовать в file.gz
+
+```gzip -d file.gz```	
+разжать file.gz в file
+
+```bunzip2 file1.bz2```
+разжимает файл 'file1.gz'
+
+```gzip -9 file1```
+сжать файл file1 с максимальным сжатием
+
+```rar a file1.rar test_file```
+создать rar-архив 'file1.rar' и включить в него файл test_file
+
+```rar a file1.rar file1 file2 dir1```
+cоздать rar-архив 'file1.rar' и включить в него file1, file2 и dir1
+
+```rar x file1.rar```
+распаковать rar-архив
+
+```tar -cvf archive.tar file1```	
+создать tar-архив archive.tar, содержащий файл file1
+
+```tar -cvf archive.tar file1``` 
+file2 dir1	создать tar-архив archive.tar, содержащий файл file1, file2 и dir1
+
+```tar -tf archive.tar```
+показать содержимое архива
+
+```tar -xvf archive.tar	```
+распаковать архив
+
+```tar -xvf archive.tar -C /tmp```	
+распаковать архив в /tmp
+
+```tar -cvfj archive.tar.bz2 dir1```	
+создать архив и сжать его с помощью bzip2(Прим.переводчика. ключ -j работает не во всех *nix системах)
+
+```tar -xvfj archive.tar.bz2```
+разжать архив и распаковать его(Прим.переводчика. ключ -j работает не во всех *nix системах)
+
+```tar -cvfz archive.tar.gz dir1```	
+создать архив и сжать его с помощью gzip
+
+```tar -xvfz archive.tar.gz```
+разжать архив и распаковать его
+
+```zip file1.zip file1```	
+создать сжатый zip-архив
+
+```zip -r file1.zip file1 file2 dir1```	
+создать сжатый zip-архив и со включением в него нескольких файлов и/или директорий
+
+```unzip file1.zip```	разжать и распаковать zip-архив
+____
+Просмотр содержимого файлов
+
+```cat file1```	вывести содержимое файла file1 на стандартное устройсво вывода
+```tac file1```	вывести содержимое файла file1 на стандартное устройсво вывода в обратном порядке (последняя строка становиться первой и т.д.)
+```more file1```	постраничный вывод содержимого файла file1 на стандартное устройство вывода
+```less file1```	постраничный вывод содержимого файла file1 на стандартное устройство вывода, но с возможностью пролистывания в обе стороны (вверх-вниз), поиска по содержимому и т.п.
+```head -2 file1```	вывести первые две строки файла file1 на стандартное устройство вывода. По-умолчанию выводится десять строк
+```tail -2 file1```	вывести последние две строки файла file1 на стандартное устройство вывода. По-умолчанию выводится десять строк
+```tail -f /var/log/messages```	выводить содержимое файла /var/log/messages на стандартное устройство вывода по мере появления в нём текста
+____
+Системная информация
+
+arch	отобразить архитектуру компьютера
+uname -r	отобразить используемую версию ядра
+dmidecode -q	показать аппаратные системные компоненты - (SMBIOS / DMI)
+hdparm -i /dev/hda	вывести характеристики жесткого диска
+hdparm -tT /dev/sda	протестировать производительность чтения данных с жесткого диска
+cat /proc/cpuinfo	отобразить информацию о процессоре
+cat /proc/interrupts	показать прерывания
+cat /proc/meminfo	проверить использование памяти
+cat /proc/swaps	показать файл(ы) подкачки
+cat /proc/version	вывести версию ядра
+cat /proc/net/dev	показать сетевые интерфейсы и статистику по ним
+cat /proc/mounts	отобразить смонтированные файловые системы
+lspci -tv	показать в виде дерева PCI устройства
+lsusb -tv	показать в виде дерева USB устройства
+date	вывести системную дату
+cal 2007	вывести таблицу-календарь 2007-го года
+date 041217002007.00	установить системные дату и время ММДДЧЧммГГГГ.СС (МесяцДеньЧасМинутыГод.Секунды)
+clock -w	сохранить системное время в BIOS
+uptime	показать текущий аптайм
+w	показать пользователей онлайн
+whoami	имя, под которым вы залогинены
+finger user	показать информацию о user
+uname -a	показать информацию о ядре
+cat /proc/cpuinfo	информация ЦПУ
+cat /proc/meminfo	информация о памяти
+man command	показать мануал для command
+df	показать инф. о использовании дисков
+du	вывести “вес” текущего каталога
+free	использование памяти и swap
+whereis app	возможное расположение программы app
+which app	какая app будет запущена по умолчанию
+____
+Остановка системы
+
+shutdown -h now	Остановить систему
+shutdown -h hours:minutes &	запланировать остановку системы на указанное время
+shutdown -c	отменить запланированную по расписанию остановку системы
+shutdown -r now	перегрузить систему
+logout	выйти из системы
+____
+Команды для работы с файлами и папками
+
+Символ тильда (~) обозначает вашу домашнюю папку. Если вы user, то тильда (~) — это /home/user.
+Команда pwd («print working directory») позволяет вам узнать, в какой директории вы находитесь в данный момент. Помните, однако, что эту же информацию Gnome Terminal всегда показывает в названии окна.
+ls покажет вам все файлы в текущей директории. Если использовать эту команду с определёнными опциями, можно также включить отображение размера файлов, времени последнего изменения и прав на файлы. Например:
+ls ~
+покажет всё, что у вас есть в домашней папке.
+
+Команда cd меняет рабочую директорию. Когда вы только запускаете терминал, вы будете находиться в вашей домашней папке. Чтобы перемещаться по файловой системе, нужно использовать cd. Примеры:
+Чтобы попасть в корневой каталог, выполните:
+cd /
+Чтобы попасть в домашнюю папку, выполните:
+cd ~
+Чтобы переместиться на один каталог вверх, используйте:
+cd ..
+Для возврата в предыдущую посещённую директорию, используйте:
+cd -
+Для перемещения через несколько директорий за раз, нужно написать полный путь папки, в которую вы хотите переместиться. Например, команда:
+cd /var/www
+переместит вас в подкаталог /www каталога /var/. А команда:
+
+cd ~/Рабочий\ стол
+переместит вас на рабочий стол. В данном случае «\» обозначает экранирование пробела.
+
+Команда cp копирует файл. Например, команда:
+cp text new
+создаст точную копию файла «text» и назовёт её «new», при этом «file» никуда не исчезнет. Для копирования директории необходимо воспользоваться командой:
+
+cp -r directory new
+где опция -r обозначает рекурсивное копирование.
+
+Команда mv перемещает файл в другое место или просто переименовывает файл. Например, команда:
+mv file text
+переименует «file» в «text».
+
+mv text ~/Рабочий\ стол
+переместит «text» вам на рабочий стол, но не переименуют его. Чтобы всё-таки переименовать файл, нужно специально указывать ему новое имя. Вы можете заменять путь к вашей домашней папке на '~', чтобы ускоряет работу. Помните, что при использовании mv вместе с sudo, терминал так же привязывает '~' к вашей домашней папке. Однако если вы включаете сессию суперпользователя в консоли с помощью sudo -i или sudo -s, то '~' будет ссылаться на корень диска, а не на ваш домашний каталог.
+
+Команда rm удаляет файл.
+Команда rmdir удаляет пустую папку. Чтобы удалить папку вместе со всеми вложениями, используйте rm -r вместо этого.
+mkdir Эта команда создаёт директорию. Команда mkdir music создаст вам папку, которая будет называться «music».
+man попробуйте эту команду, когда вы хотите прочитать встроенное описание другой команды. Например:
+man man
+покажет вам описание самой этой команды.
+
+Команды информации о системе
+
+Команда df показывает объём занятого дискового пространства на всех смонтированных разделах. Наиболее полезна:
+df -h
+Поскольку использует для отображения Мегабайты (M) и Гигабайты (G), а не блоки. -h означает «human readable» («читабельный для человека»).
+
+du отображает объём дискового пространства, занятого конкретной папкой. Она может показывать информацию для всех поддиректорий отдельно или для папки в целом. ..
+user@users-desktop:~$ du /media/floppy
+1032    /media/floppy/files
+1036    /media/floppy/
+user@users-desktop:~$ du -sh /media/floppy
+1.1M    /media/floppy/
+.. -s означает «summary» (в целом), а -h означает «human readable» («читабельный для человека»).
+
+free отображает объём свободной и занятой оперативной памяти. Команда:
+free -m
+показывает информацию в Мегабайтах.
+
+top отображает информацию о вашей системе, запущенных процессах и системных ресурсах, включая загрузку CPU, использование RAM и swap и количество запущенных процессов. Чтобы остановить top, нажмите Q.
+Также существует еще несколько замечательных и очень нужных утилит, оформленных в стиле top:
+htop аналог top, намного превосходящий по возможностям
+iftop информация об активных сетевых соединениях, скорость сетевой закачки/отдачи
+iotop информация о процессах выполняющих активные дисковые операции
+htop, iftop, iotop не входят в стандартный комплект дистрибутива Ubuntu, но легко устанавливаются из стандартных репозиториев.
+uname с опцией -a выводит всю системную информацию, включая имя машины, версию ядра и другие детали. Самое полезное из этого — проверка версии ядра.
+lsb_release с опцией -a выводит информацию о версии Linux, которую вы используете. Например:
+user@computer:~$ lsb_release -a
+No LSB modules are available.
+Distributor ID: Ubuntu
+Description:    Ubuntu 6.06 LTS
+Release:        6.06
+Codename:       dapper
+ifconfig выводит отчёт о сетевых интерфейсах системы.
+hwinfo без ключей выводит очень длинный список всего оборудования, но существует ключи для получения конкретной информации о части оборудования --cpu --disk --memory и другие, см man по этой утилите.
+lsusb и lspci информация о USB- и PCI- устройствах
+
+Построение дерева каталогов (tree)
+
+Утилита выводит дерево каталогов в красиво отформатированном виде. Пакет tree находится в репозиториях Ubuntu, поэтому установка выполняется одной строкой:
+
+sudo apt-get install tree
+Для вывода дерева каталогов команда должна иметь следующий вид:
+
+tree -dA test
